@@ -27,6 +27,7 @@ use EBox::Types::File;
 use EBox::Config::Redis;
 use EBox::Model::Manager;
 
+use Error qw(:try);
 use File::Basename;
 
 sub _create
@@ -927,6 +928,29 @@ sub global
 {
     my ($self) = @_;
     return EBox::Global->getInstance($self->{ro});
+}
+
+# Method: save
+#
+#   Overrides: <EBox::Module::Base::save>
+#
+#   Do all the save process on a single redis transaction, otherwise
+#   there are concurrency problems when executed from global-action
+#
+sub save
+{
+    my ($self) = @_;
+
+    my $redis = $self->redis();
+    try {
+        $redis->begin();
+        $self->SUPER::save(@_);
+        $redis->commit();
+    } otherwise {
+        my $ex = shift;
+        $redis->rollback();
+        $ex->throw();
+    };
 }
 
 1;
